<resources>
    <string name="app_name">Demo App</string>
    <string name="HelloText">Welcome to Dice.Co</string>
    <string name="rollDiceRules">Roll 1 or 6 to pass!</string>
    <string name="playerName"> </string>
    <string name="scrollOne">
        Place the status board in the middle of the table.
        \n\nPlace the status marker on the one space.
        \n\nPlace all of the dice to the left of the status board in three piles based on the three different types of dice:
        \n\nground floor, upper floor, penthouse. These piles are referred to as the construction yard.
        \n\nTake one dice of each type and place them to the right of the status board.
        \n\nThis pile is known as the abandoned district.
        \n\nAll of the building tiles should be placed near the status board.
        \n\nThe player who has most recently been in a high-rise building will start the game.
        \n\nStarting with the first player and moving clockwise players will receive one die set to a specific ground floor to start the game.
        \n\nThe first player will receive a high-rise/orange ground floor.
        \n\nThe second player will receive a mid-rise/blue ground floor.
        \n\nThe third player will get a low-rise/purple ground floor.
        \n\nThe fourth player receives no die at the beginning of the game.
    </string>
    <string name="editPlayerName">Adrian Fong</string>
    <string name="updatePlayerName">Update</string>
    <string name="name" />
</resources>